2006/01/29 - Version 0.5.9
------------------------------
- STAT-25: New msgcntr Events need to be added to SiteStats

2006/01/17 - Version 0.5.8
------------------------------
- STAT-24: Overview page may generate bug report if site has no members

2006/12/28 - Version 0.5.7
------------------------------
- added support for new 'Poll' events
- STAT-18: Deleted resources may slow down Site Stats  
- STAT-19: Site Stats gives a stack trace error when you click on "resources"
- STAT-20: Conflicting 'content.*' (Resources/MessageCenter) events may not get correctly processed
- STAT-21: Do not render links for deleted resources on Resources page
- STAT-22: Search doesn't work for external users

2006/10/31 - Version 0.5.6
------------------------------
- fixed STAT-17: Locale bundle not read
- from STAT-16: Add new events:
	- added support for 'View assignment' event
	- added support for MessageCenter events
	- added support for new 'Sections' events

2006/10/30 - Version 0.5.5a
------------------------------
- Use event id as event name if resource bundle does not exist

2006/10/26 - Version 0.5.5
------------------------------
- Removed "?" users because of its ambiguous meaning: anonymous/denied access
- fixed STAT-13: Unique visits incorrectly shown
- added "Unique visits/total users" to Overview page
- fixed STAT-12: SiteStats does not work with custom roles:
	- for sakai_2-2-x, add role to tool.xml and apply SAK-4120 custom patch
	- for sakai_2-3-x up:
		- requires "sitestats.view" permission for standard tool (existing realms MUST be updated)
		- requires "sitestats.admin.view" permission for admin version of the tool
- added support for wiki.new, wiki.delete (sakai 2.3+ only)		
- updated to match SAK-4120/REQ-47/SAK-1454 resolution

2006/09/06 - Version 0.5.4
------------------------------
- Fixed (rare) case where no data was displayed in Events and Resources page unless searching by keyword